Fix active link color in dark mode

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -47,6 +47,7 @@ body {
         --link-fg: #dddddd;
         --link-hover-fg: #ffffff;
         --link-click-fg: #ffffff;
+        --link-active-fg: #ffffff;
         --image-border: solid 1px #bbbbbb;
     }
 }
